# hacker-rs

./: Cargo.toml  README.md  config.toml  system_prompt.txt
src/: cli.rs  command_executor.rs  config.rs  core.rs  main.rs  network.rs  ollama_client.rs  setup.rs
